--- a/inst/rmarkdown/templates/HCI Basel Report/template.yaml
+++ b/inst/rmarkdown/templates/HCI Basel Report/template.yaml
@@ -1,4 +1,4 @@
 name: HCI Basel Seminar Report
 description: >
-   A template used in the course Online Research in HCI: Questionnaire development and validation.
+   A template used in the course Online Research in HCI: Questionnaire development and analysis.
 create_dir: FALSE
